Update feature20개로 다시 RF.ipynb

--- a/Aimers hackerton/feature20개로 다시 RF.ipynb
+++ b/Aimers hackerton/feature20개로 다시 RF.ipynb
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "outputs": [],
    "source": [
     "train_x = train.drop(['Y_Class', 'Y_Quality'], axis=1)\n",
@@ -186,113 +186,213 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "X_1118 0.017271242607648854\n",
-      "X_1405 0.01665629136521816\n",
-      "X_1548 0.015383291023175562\n",
-      "X_1485 0.015368822370830877\n",
-      "X_1091 0.015259603935218323\n",
-      "X_1211 0.015125794328482956\n",
-      "X_1423 0.014994573148073164\n",
-      "X_718 0.014519865145480721\n",
-      "X_1500 0.014466255079901414\n",
-      "X_1339 0.014464481422528526\n",
-      "X_1774 0.014322997487606279\n",
-      "X_979 0.014262283990827029\n",
-      "X_1834 0.014213057831638475\n",
-      "X_240 0.014183563249745007\n",
-      "X_1428 0.014157821126726389\n",
-      "X_1617 0.01402362084882341\n",
-      "X_1198 0.013796140960755056\n",
-      "X_1473 0.013764008858550896\n",
-      "X_1083 0.013564046427720751\n",
-      "X_1475 0.013321541466649656\n",
-      "X_1636 0.013204879549014809\n",
-      "X_1077 0.01314478461622563\n",
-      "X_1849 0.012935785043911945\n",
-      "X_1414 0.012915779056259681\n",
-      "X_368 0.012817418684700769\n",
-      "X_1421 0.012471452410992994\n",
-      "X_73 0.012302905566187978\n",
-      "X_2846 0.012207599543572109\n",
-      "X_1665 0.011951844755341891\n",
-      "X_1329 0.011727505415940668\n",
-      "X_932 0.01141392264446386\n",
-      "X_367 0.011250859431393883\n",
-      "X_1161 0.011231592730816982\n",
-      "X_665 0.011192212180095083\n",
-      "X_318 0.011093391877900599\n",
-      "X_1056 0.010984600974371955\n",
-      "X_1049 0.010927108314844622\n",
-      "X_242 0.010600723915130597\n",
-      "X_243 0.010505908112626226\n",
-      "X_1117 0.010371815957205452\n",
-      "X_1217 0.010270880407466241\n",
-      "X_1053 0.01022014474732595\n",
-      "X_1145 0.010061506304561055\n",
-      "X_964 0.009783786488944802\n",
-      "X_1374 0.009750635326006452\n",
-      "X_961 0.009712372428881405\n",
-      "X_965 0.009618485268474832\n",
-      "X_1501 0.00943839273022461\n",
-      "X_720 0.00940840754447996\n",
-      "X_121 0.009384314513283367\n",
-      "X_120 0.009375676499427105\n",
-      "X_786 0.00920123125144865\n",
-      "X_462 0.009142251956748624\n",
-      "X_698 0.00905205426930713\n",
-      "X_960 0.008944312849226818\n",
-      "X_1032 0.008907122227383692\n",
-      "X_835 0.008855352490938799\n",
-      "X_258 0.008743263350080754\n",
-      "X_1369 0.008709734185610449\n",
-      "X_11 0.00844788531279143\n",
-      "X_696 0.008340201974489576\n",
-      "X_855 0.008307587942296656\n",
-      "X_1614 0.008190948243636982\n",
-      "X_265 0.008174054083564886\n",
-      "X_388 0.008115963165557877\n",
-      "X_448 0.008113694559726022\n",
-      "X_422 0.008094206254117185\n",
-      "X_256 0.008075600776604007\n",
-      "X_267 0.007841163416832607\n",
-      "X_387 0.00765778513378764\n",
-      "X_257 0.0076478607685508985\n",
-      "X_492 0.0076470105656346755\n",
-      "X_651 0.007532881133210156\n",
-      "X_917 0.007487432863259416\n",
-      "X_717 0.007458779902594012\n",
-      "X_482 0.007417798782083128\n",
-      "X_374 0.007383872147749235\n",
-      "X_739 0.007336955730682153\n",
-      "X_608 0.007237592678930738\n",
-      "X_662 0.007180709245192639\n",
-      "X_373 0.007156243626912583\n",
-      "X_423 0.007119605603481415\n",
-      "X_528 0.0071067591646163455\n",
-      "X_728 0.007008867015639908\n",
-      "X_266 0.006951057885036781\n",
-      "X_452 0.006831753077130021\n",
-      "X_399 0.006803054895715231\n",
-      "X_572 0.006603877028909819\n",
-      "X_568 0.006596635852276949\n",
-      "X_644 0.006555673959669579\n",
-      "X_645 0.006555160108172393\n",
-      "X_498 0.00654563694865537\n",
-      "X_497 0.006389805000407137\n",
-      "X_248 0.006246066173297968\n",
-      "X_838 0.006201952036042545\n",
-      "X_916 0.006195617988282021\n",
-      "X_495 0.006121319812430089\n",
-      "X_856 0.005949829672192337\n",
-      "X_534 0.0059290508870200685\n",
-      "X_307 0.004490730286399391\n",
-      "['X_1118', 'X_1405', 'X_1548', 'X_1485', 'X_1091', 'X_1211', 'X_1423', 'X_718', 'X_1500', 'X_1339', 'X_1774', 'X_979', 'X_1834', 'X_240', 'X_1428', 'X_1617', 'X_1198', 'X_1473', 'X_1083', 'X_1475', 'X_1636', 'X_1077', 'X_1849', 'X_1414', 'X_368', 'X_1421', 'X_73', 'X_2846', 'X_1665', 'X_1329', 'X_932', 'X_367', 'X_1161', 'X_665', 'X_318', 'X_1056', 'X_1049', 'X_242', 'X_243', 'X_1117', 'X_1217', 'X_1053', 'X_1145', 'X_964', 'X_1374', 'X_961', 'X_965', 'X_1501', 'X_720', 'X_121', 'X_120', 'X_786', 'X_462', 'X_698', 'X_960', 'X_1032', 'X_835', 'X_258', 'X_1369', 'X_11', 'X_696', 'X_855', 'X_1614', 'X_265', 'X_388', 'X_448', 'X_422', 'X_256', 'X_267', 'X_387', 'X_257', 'X_492', 'X_651', 'X_917', 'X_717', 'X_482', 'X_374', 'X_739', 'X_608', 'X_662', 'X_373', 'X_423', 'X_528', 'X_728', 'X_266', 'X_452', 'X_399', 'X_572', 'X_568', 'X_644', 'X_645', 'X_498', 'X_497', 'X_248', 'X_838', 'X_916', 'X_495', 'X_856', 'X_534', 'X_307']\n"
+      "X_2017 0.01069063311920911\n",
+      "X_1945 0.010342000887534262\n",
+      "X_718 0.009902991210033183\n",
+      "X_2701 0.00964055494452816\n",
+      "X_1405 0.009139098428250236\n",
+      "X_1500 0.009011055042143088\n",
+      "X_1211 0.00899263807219975\n",
+      "X_73 0.008476321574446158\n",
+      "X_1118 0.008430721814032491\n",
+      "X_1091 0.008293258005032335\n",
+      "X_1423 0.00781701684920683\n",
+      "X_318 0.0074685065907849285\n",
+      "X_1485 0.007425680323015182\n",
+      "X_1617 0.0073779254893273525\n",
+      "X_368 0.007347078583677201\n",
+      "X_1198 0.007254132445339225\n",
+      "X_1774 0.007232314327643224\n",
+      "X_1339 0.0071983650055847\n",
+      "X_1518 0.0071966867432038464\n",
+      "X_1834 0.0071905507289680886\n",
+      "X_665 0.007169523967765723\n",
+      "X_1560 0.007166688178423873\n",
+      "X_1517 0.007122487852406624\n",
+      "X_367 0.0071100694943865795\n",
+      "X_1083 0.007058049704221912\n",
+      "X_1548 0.0070107716442420025\n",
+      "X_1636 0.0069698364811389335\n",
+      "X_932 0.006845324197078015\n",
+      "X_121 0.006744761649950742\n",
+      "X_240 0.006717930603699842\n",
+      "X_979 0.0066276752945580025\n",
+      "X_720 0.0065397609691350295\n",
+      "X_1428 0.006453089975155844\n",
+      "X_120 0.006383784056989663\n",
+      "X_1480 0.006371108523710981\n",
+      "X_1665 0.006310830653252501\n",
+      "X_256 0.006219720781726712\n",
+      "X_2841 0.006113622466987169\n",
+      "X_462 0.0060653016142401435\n",
+      "X_1099 0.00605454532291672\n",
+      "X_1651 0.006034633620465225\n",
+      "X_1108 0.005975095253224804\n",
+      "X_2466 0.005943371577470777\n",
+      "X_258 0.00593173594390899\n",
+      "X_242 0.0058022854041063455\n",
+      "X_1329 0.005787038522609982\n",
+      "X_1106 0.005745910760733316\n",
+      "X_1501 0.005731561162273239\n",
+      "X_698 0.0057233784946363634\n",
+      "X_1569 0.005713018717855149\n",
+      "X_257 0.005694390727304755\n",
+      "X_1421 0.005616223062505755\n",
+      "X_899 0.0055607458656073945\n",
+      "X_2854 0.005515554224877688\n",
+      "X_1415 0.00550461027214977\n",
+      "X_1333 0.005445150056824884\n",
+      "X_961 0.0054403493532144175\n",
+      "X_608 0.005384849209848078\n",
+      "X_1403 0.005305452276972912\n",
+      "X_786 0.0052943373278290205\n",
+      "X_999 0.0052900568466335155\n",
+      "X_388 0.005259100466731037\n",
+      "X_1343 0.005218610164993451\n",
+      "X_2846 0.005166883387782795\n",
+      "X_1473 0.0051493250262645\n",
+      "X_1327 0.005130951380732451\n",
+      "X_1422 0.005128170436664711\n",
+      "X_1614 0.0051221167107305095\n",
+      "X_1056 0.005120154239185245\n",
+      "X_1512 0.0051163287519921125\n",
+      "X_1474 0.005114225571931819\n",
+      "X_1010 0.00511133344790208\n",
+      "X_243 0.005088711733639\n",
+      "X_1475 0.005064436603870522\n",
+      "X_248 0.005049271947484268\n",
+      "X_1012 0.005039547332970551\n",
+      "X_1414 0.005009080074912675\n",
+      "X_1420 0.0050062664182684395\n",
+      "X_1032 0.0049764172188456746\n",
+      "X_985 0.004950157000189674\n",
+      "X_907 0.004924352539740615\n",
+      "X_373 0.0049116464503905196\n",
+      "X_1049 0.00491081881201949\n",
+      "X_1497 0.004895070833001788\n",
+      "X_1369 0.0048881056708621464\n",
+      "X_1055 0.004885599377271225\n",
+      "X_448 0.004884680689919701\n",
+      "X_422 0.0048822607440861575\n",
+      "X_387 0.004861017224055909\n",
+      "X_1161 0.0048533348728603655\n",
+      "X_916 0.004834715392577085\n",
+      "X_1532 0.004817801137855268\n",
+      "X_265 0.004795719326511418\n",
+      "X_1089 0.0047869500326543956\n",
+      "X_374 0.004785360888810867\n",
+      "X_492 0.004757265289437692\n",
+      "X_1117 0.004750724586546163\n",
+      "X_1129 0.004740994753129086\n",
+      "X_528 0.004739371999609647\n",
+      "X_266 0.00472864433346346\n",
+      "X_696 0.004701221981936042\n",
+      "X_662 0.004695095455053704\n",
+      "X_1288 0.004647263134012555\n",
+      "X_733 0.004641531894063427\n",
+      "X_1077 0.004588816912683149\n",
+      "X_1214 0.004573100284871657\n",
+      "X_651 0.0045720319036574196\n",
+      "X_1116 0.004568802205812619\n",
+      "X_1033 0.004537900479022416\n",
+      "X_1849 0.004518946272058814\n",
+      "X_1074 0.004493267812515592\n",
+      "X_986 0.004485922700897359\n",
+      "X_835 0.004485679469882399\n",
+      "X_1073 0.004483406769140472\n",
+      "X_572 0.00447203264264693\n",
+      "X_452 0.0044680146362477855\n",
+      "X_1459 0.004429626253223905\n",
+      "X_1471 0.004428375339044559\n",
+      "X_1374 0.00441519532364659\n",
+      "X_717 0.004387297832208018\n",
+      "X_497 0.004386101789731388\n",
+      "X_1538 0.0043508875771827195\n",
+      "X_536 0.00435021103590908\n",
+      "X_1455 0.004343922020765848\n",
+      "X_1040 0.004337393586814591\n",
+      "X_918 0.00433415877451374\n",
+      "X_748 0.004327198781600095\n",
+      "X_1217 0.004325178146171037\n",
+      "X_1110 0.004318985258487957\n",
+      "X_1495 0.004272285824426492\n",
+      "X_982 0.004269926765465306\n",
+      "X_1563 0.004267360878417981\n",
+      "X_399 0.004260688971787323\n",
+      "X_1053 0.0042552202627826104\n",
+      "X_1013 0.0042480639646841\n",
+      "X_964 0.004243184061471707\n",
+      "X_2864 0.004226822035314695\n",
+      "X_960 0.0042261656306816445\n",
+      "X_655 0.004164241143842698\n",
+      "X_20 0.00414377663941464\n",
+      "X_189 0.004123294772573958\n",
+      "X_663 0.0041126337464797895\n",
+      "X_645 0.0041057198949378555\n",
+      "X_103 0.004096455679026606\n",
+      "X_1536 0.004076337300245711\n",
+      "X_855 0.004069976857006666\n",
+      "X_856 0.0040637552060222345\n",
+      "X_1145 0.004054537640440625\n",
+      "X_757 0.004029302448227327\n",
+      "X_914 0.004027086174427453\n",
+      "X_423 0.004013997044630964\n",
+      "X_514 0.0039956949152611665\n",
+      "X_1486 0.003970402185366319\n",
+      "X_102 0.003958168621418871\n",
+      "X_1349 0.003952978078960264\n",
+      "X_1054 0.003949889021132475\n",
+      "X_531 0.003941836922186273\n",
+      "X_21 0.003894732774450447\n",
+      "X_517 0.0038882263164221054\n",
+      "X_1558 0.00382446742068759\n",
+      "X_13 0.0038028459130084917\n",
+      "X_1404 0.0038007847253863965\n",
+      "X_1430 0.0037949408076466207\n",
+      "X_1613 0.003719064412237009\n",
+      "X_267 0.0037159003169973046\n",
+      "X_838 0.003703662967816831\n",
+      "X_917 0.0036727418451670876\n",
+      "X_568 0.0036507486506573957\n",
+      "X_728 0.0036425372141871575\n",
+      "X_534 0.003619235067794533\n",
+      "X_421 0.0036181769906202753\n",
+      "X_697 0.0036068929192415613\n",
+      "X_307 0.0036053735662219715\n",
+      "X_790 0.0035997151465569765\n",
+      "X_963 0.0035984235666291727\n",
+      "X_751 0.003567148150868787\n",
+      "X_1456 0.003545600546674693\n",
+      "X_474 0.0035136759777879938\n",
+      "X_927 0.003488953217361946\n",
+      "X_818 0.003478531611421338\n",
+      "X_482 0.003436687621948612\n",
+      "X_644 0.0033933187967326995\n",
+      "X_893 0.003379653844703023\n",
+      "X_498 0.003377536622307773\n",
+      "X_1640 0.0033614523185188316\n",
+      "X_12 0.0033074190267246206\n",
+      "X_965 0.0033071833900694624\n",
+      "X_1629 0.0032228177097942323\n",
+      "X_495 0.003215702841514028\n",
+      "X_739 0.0030672021487702546\n",
+      "X_891 0.0030589039032622783\n",
+      "X_793 0.002935341407973877\n",
+      "X_11 0.0028505760972366454\n",
+      "X_394 0.0027898394299567804\n",
+      "X_700 0.0026852250317327742\n",
+      "X_772 0.002664500743935744\n",
+      "X_442 0.0026293957722776586\n",
+      "X_719 0.002515065403804776\n",
+      "X_827 0.0024647559639792817\n",
+      "X_1559 0.0018199876713841298\n",
+      "['X_2017', 'X_1945', 'X_718', 'X_2701', 'X_1405', 'X_1500', 'X_1211', 'X_73', 'X_1118', 'X_1091', 'X_1423', 'X_318', 'X_1485', 'X_1617', 'X_368', 'X_1198', 'X_1774', 'X_1339', 'X_1518', 'X_1834', 'X_665', 'X_1560', 'X_1517', 'X_367', 'X_1083', 'X_1548', 'X_1636', 'X_932', 'X_121', 'X_240', 'X_979', 'X_720', 'X_1428', 'X_120', 'X_1480', 'X_1665', 'X_256', 'X_2841', 'X_462', 'X_1099', 'X_1651', 'X_1108', 'X_2466', 'X_258', 'X_242', 'X_1329', 'X_1106', 'X_1501', 'X_698', 'X_1569', 'X_257', 'X_1421', 'X_899', 'X_2854', 'X_1415', 'X_1333', 'X_961', 'X_608', 'X_1403', 'X_786', 'X_999', 'X_388', 'X_1343', 'X_2846', 'X_1473', 'X_1327', 'X_1422', 'X_1614', 'X_1056', 'X_1512', 'X_1474', 'X_1010', 'X_243', 'X_1475', 'X_248', 'X_1012', 'X_1414', 'X_1420', 'X_1032', 'X_985', 'X_907', 'X_373', 'X_1049', 'X_1497', 'X_1369', 'X_1055', 'X_448', 'X_422', 'X_387', 'X_1161', 'X_916', 'X_1532', 'X_265', 'X_1089', 'X_374', 'X_492', 'X_1117', 'X_1129', 'X_528', 'X_266', 'X_696', 'X_662', 'X_1288', 'X_733', 'X_1077', 'X_1214', 'X_651', 'X_1116', 'X_1033', 'X_1849', 'X_1074', 'X_986', 'X_835', 'X_1073', 'X_572', 'X_452', 'X_1459', 'X_1471', 'X_1374', 'X_717', 'X_497', 'X_1538', 'X_536', 'X_1455', 'X_1040', 'X_918', 'X_748', 'X_1217', 'X_1110', 'X_1495', 'X_982', 'X_1563', 'X_399', 'X_1053', 'X_1013', 'X_964', 'X_2864', 'X_960', 'X_655', 'X_20', 'X_189', 'X_663', 'X_645', 'X_103', 'X_1536', 'X_855', 'X_856', 'X_1145', 'X_757', 'X_914']\n"
      ]
     }
    ],
@@ -318,7 +418,7 @@
     "\n",
     "#상위20개만...\n",
     "a=[]\n",
-    "for i in range(100):\n",
+    "for i in range(150):\n",
     "    a.append(feat_labels[indices[i]])\n",
     "print(a)"
    ],
@@ -328,22 +428,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[  9   3   2]\n",
-      " [ 12 121  16]\n",
-      " [  0   7  10]]\n"
+      "[[  7   2   0]\n",
+      " [ 14 128  22]\n",
+      " [  0   1   6]]\n"
      ]
     },
     {
      "data": {
-      "text/plain": "0.7777777777777778"
+      "text/plain": "0.7833333333333333"
      },
-     "execution_count": 26,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -373,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 26,
    "outputs": [],
    "source": [
     "RF = RandomForestClassifier(n_jobs = -1 ,random_state=37)"
@@ -401,7 +501,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "array([1, 1, 1, 1, 1, 1, 1, 0, 0, 1, 1, 1, 1, 0, 0, 1, 1, 1, 1, 1, 1, 1,\n       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 2, 1, 1, 0, 0, 1,\n       1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0,\n       0, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1,\n       0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 2,\n       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 2, 1, 0, 0,\n       0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n       1, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 0, 1, 1, 0,\n       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0,\n       0, 1, 1, 1, 1, 1, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n       1, 1])"
+      "text/plain": "array([1, 1, 1, 1, 1, 1, 1, 0, 0, 1, 1, 1, 1, 2, 0, 1, 1, 1, 1, 1, 1, 1,\n       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 2, 0, 2, 0, 0, 0, 0, 1,\n       1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 1, 1, 1, 1, 1, 1, 0, 0, 2, 0, 0,\n       0, 1, 1, 1, 1, 0, 2, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1,\n       0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 2,\n       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 2, 2, 2,\n       2, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n       1, 1, 1, 1, 1, 1, 2, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n       1, 1, 1, 1, 1, 1, 2, 2, 2, 2, 2, 2, 2, 2, 1, 1, 1, 1, 2, 1, 1, 2,\n       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 2, 2, 2, 2, 2, 2,\n       2, 1, 1, 1, 1, 1, 2, 2, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n       1, 1])"
      },
      "execution_count": 28,
      "metadata": {},
@@ -442,7 +542,7 @@
    "execution_count": 31,
    "outputs": [],
    "source": [
-    "submit.to_csv('/Users/sola/Downloads/open/baseline_submission11.csv', index=False)"
+    "submit.to_csv('/Users/sola/Downloads/open/baseline_submission12.csv', index=False)"
    ],
    "metadata": {
     "collapsed": false
@@ -499,8 +599,28 @@
    "source": [
     "피쳐중요도가 상위 100개만 골라서 돌려봄, 랜덤포레스트를 이용함, 근데 feature importance 구한\n",
     "submission11\n",
-    "-> 정확도"
+    "-> 정확도 0.6417156366"
    ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "피쳐중요도가 상위 150개만 골라서 돌려봄, 랜덤포레스트를 이용함, 근데 feature importance 구한\n",
+    "submission12\n",
+    "-> 정확도 0.586584568 -> 젠장 왜이러는거야ㅠㅠㅠ"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false
    }
